--- a/TMS/TMS/Areas/HelpDesk/Views/Shared/_TopLayout.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Shared/_TopLayout.cshtml
@@ -97,11 +97,11 @@
             <!-- /.container -->
         </div>
         <!-- /.content-wrapper -->
-        <footer class="main-footer bg-blue">
+        <footer class="main-footer bg-blue text-white">
             <div class="pull-right hidden-xs">
                 <b>Version</b> 1.1.1
             </div>
-            <strong>Copyright &copy; 2016-2017 <a href="http://tms.com" style="color: #2a2a2a !important">Group 4</a>.</strong> All rights
+            <strong>Copyright &copy; 2016-2017 <a href="http://tms.com" class="text-white">Group 4</a>.</strong> All rights
             reserved.
         </footer>
     </div>
