--- a/TMS/TMS/Views/Profile/ChangePassword.cshtml
+++ b/TMS/TMS/Views/Profile/ChangePassword.cshtml
@@ -63,6 +63,9 @@
                                         case "technician":
                                             @Html.ActionLink("Cancel", "Index", new { area = "Technician" }, new { @class = "btn btn-transparent btn-flat" })
                                             break;
+                                        case "manager":
+                                            @Html.ActionLink("Cancel", "Index", new { area = "Manager" }, new { @class = "btn btn-transparent btn-flat" })
+                                            break;
                                         case "requester":
                                             @Html.ActionLink("Cancel", "Index", new { area = "" }, new { @class = "btn btn-transparent btn-flat" })
                                             break;
