--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -3,15 +3,11 @@
     Layout = "~/Areas/HelpDesk/Views/Shared/_TopLayout.cshtml";
     ViewBag.Title = "Ticket Management";
 }
-<link href="~/Content/Plugins/icheck/skins/square/blue.css" rel="stylesheet">
+<link href="~/Content/Plugins/icheck/skins/square/green.css" rel="stylesheet">
 <link rel="stylesheet" href="~/Content/custom-css/ticket-detail.css" />
 <link rel="stylesheet" href="~/Content/css/daterangepicker.css" />
 
 <style>
-    table.dataTable tbody td {
-        vertical-align: middle;
-    }
-
     .select2-dropdown {
         z-index: 1200;
     }
@@ -577,19 +573,19 @@
                                     <label>Due by</label>
                                 </div>
                                 <div class="col-sm-4">
-                                    <input class="due_by_item" id="Overdue" name="Overdue" type="checkbox" value="Overdue">
+                                    <input class="due_by_item" id="Overdue" name="Overdue" type="checkbox" value="Overdue"> &nbsp;
                                     <label>Overdue</label>
                                 </div>
                                 <div class="col-sm-4">
-                                    <input class="due_by_item" id="Today" name="Today" type="checkbox" value="Today">
+                                    <input class="due_by_item" id="Today" name="Today" type="checkbox" value="Today"> &nbsp;
                                     <label>Today</label>
                                 </div>
                                 <div class="col-sm-offset-4 col-sm-4">
-                                    <input class="due_by_item" id="Tomorrow" name="Tomorrow" type="checkbox" value="Tomorrow">
+                                    <input class="due_by_item" id="Tomorrow" name="Tomorrow" type="checkbox" value="Tomorrow"> &nbsp;
                                     <label>Tomorrow</label>
                                 </div>
                                 <div class="col-sm-4">
-                                    <input class="due_by_item" id="Next_8_hours" name="Next 8 hours" type="checkbox" value="Next_8_hours">
+                                    <input class="due_by_item" id="Next_8_hours" name="Next 8 hours" type="checkbox" value="Next_8_hours"> &nbsp;
                                     <label>Next 8 hours</label>
                                 </div>
                             </div>
