--- a/TMS/TMS/Areas/Technician/Views/Home/Index.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/Home/Index.cshtml
@@ -46,7 +46,7 @@
     }
 </style>
 
-<h3 class="text-purple">Welcome back, @ViewBag.LayoutName!</h3>
+<h3 class="text-purple">Welcome, @ViewBag.LayoutName!</h3>
 
 <h4>Last 7 days</h4>
 <div class="row">
@@ -106,7 +106,7 @@
             <div class="box-header bg-red-active">
                 <h4><i class="fa fa-tags"></i>&nbsp;&nbsp;These tickets need your attention</h4>
             </div>
-            @if (incomingTickets != null)
+            @if (incomingTickets != null && incomingTickets.Length > 0)
             {
                 <div class="box-body">
                     @foreach (BasicTicketViewModel ticket in incomingTickets)
