--- a/TMS/TMS/Content/custom-css/tms.css
+++ b/TMS/TMS/Content/custom-css/tms.css
@@ -27,6 +27,10 @@
         color: #3c8dbc;
     }
 
+.text-white {
+    color: #ffffff !important;
+}
+
 .modal {
     text-align: center;
 }
@@ -42,6 +46,7 @@
 }
 
 #notification-list {
+    min-height: 105px;
     max-height: 400px;
 }
 
