--- a/TMS/TMS/Views/Shared/_TopLayout.cshtml
+++ b/TMS/TMS/Views/Shared/_TopLayout.cshtml
@@ -106,11 +106,11 @@
             <!-- /.container -->
         </div>
         <!-- /.content-wrapper -->
-        <footer class="main-footer bg-green">
+        <footer class="main-footer bg-green text-white">
             <div class="pull-right hidden-xs">
                 <b>Version</b> 1.1.1
             </div>
-            <strong>Copyright &copy; 2016-2016 <a href="http://tms.com">Group 4</a>.</strong> All rights
+            <strong>Copyright &copy; 2016-2016 <a href="http://tms.com" class="text-white">Group 4</a>.</strong> All rights
             reserved.
         </footer>
     </div>
